--- a/client/src/Components/Password/Password.css
+++ b/client/src/Components/Password/Password.css
@@ -27,3 +27,8 @@
   display: flex;
   flex-direction: column;
 }
+.pass-field-alt span{
+  height: max-content;
+  width: 100%;
+  word-wrap: break-word
+}
